added new handlers

--- a/data/getAlertNode.html
+++ b/data/getAlertNode.html
@@ -12,7 +12,7 @@
     <table>
         <thead>
         <th align="left">Name</th>
-        <th>Value</th>
+        <th align="left">Value</th>
         <th></th>
         </thead>
         <tr>
