--- a/data/getAlert.html
+++ b/data/getAlert.html
@@ -13,25 +13,25 @@
     <table>
         <thead>
         <th align="left">Name</th>
-        <th>Value</th>
+        <th align="left">Value</th>
         <th></th>
         </thead>
         <tr>
             <td>Name</td>
-            <td><input name="Name" type="number" value="{{.Name}}"/></td>
+            <td><input name="Name" type="text" value="{{.Name}}"/></td>
             <td>
                 <input type="submit" value="Send" style="padding: 5px; margin: 1px;"/>
             </td>
         </tr>
         <tr>
             <td>CheckedField</td>
-            <td><input name="CheckedField" type="number" value="{{.CheckedField}}"/></td>
+            <td><input name="CheckedField" type="text" value="{{.CheckedField}}"/></td>
             <td>
             </td>
         </tr>
         <tr>
             <td>TypeChecker</td>
-            <td><input name="TypeChecker" type="number" value="{{.TypeChecker}}"/></td>
+            <td><input name="TypeChecker" type="text" value="{{.TypeChecker}}"/></td>
             <td>
             </td>
         </tr>
