--- a/data/getAlert.html
+++ b/data/getAlert.html
@@ -9,7 +9,7 @@
 </header>
 
 
-<form method="POST" action="/alert/{{.ID}}">
+<form action="/alert/{{.ID}}/edit" method="POST">
     <table>
         <thead>
         <th align="left">Name</th>
