--- a/data/getAlertNode.html
+++ b/data/getAlertNode.html
@@ -8,7 +8,7 @@
 <header>
 </header>
 
-<form method="POST" action="/alertNode/{{.AlertID}}">
+<form action="/alertNode/{{.AlertID}}/edit" method="POST">
     <table>
         <thead>
         <th align="left">Name</th>
