added create/delete endpoints for alertNode

--- a/data/getAlerts.html
+++ b/data/getAlerts.html
@@ -22,7 +22,7 @@
     </thead>
     {{range .}}
     <tr>
-        <td><a href='/alertNode/{{.ID}}/edit'>{{.ID}}</a></td>
+        <td><a href='/alertNode/{{.ID}}/action'>{{.ID}}</a></td>
         <td>{{.Name}}</td>
         <td>{{.CheckedField}}</td>
         <td>{{.TypeChecker}}</td>
