--- a/data/getEmptyAlertNode.html
+++ b/data/getEmptyAlertNode.html
@@ -8,7 +8,7 @@
 <header>
 </header>
 
-<form action="/alertNode/edit" method="POST">
+<form action="/alertNode/create" method="POST">
     <table>
         <thead>
         <th align="left">Name</th>
@@ -19,7 +19,7 @@
             <td>NormalFrom</td>
             <td><input name="NormalFrom" type="number" value="{{.NormalFrom}}"/></td>
             <td>
-                <input type="submit" value="Send" style="padding: 5px; margin: 1px;"/>
+                <input style="padding: 5px; margin: 1px;" type="submit" value="Send"/>
             </td>
         </tr>
         <tr>
